| Summary: | ASTERISK-25882: ARI: Crash can occur due to race condition when attempting to operate on a hung up channel (Part 2) | ||||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |||
| Date Opened: | 2016-03-30 16:08:07 | Date Closed: | 2016-03-31 13:22:32 | ||
| Priority: | Major | Regression? | No | ||
| Status: | Closed/Complete | Components: | Resources/res_ari Resources/res_stasis | ||
| Versions: | 13.8.0 | Frequency of Occurrence | Occasional | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | A crash was observed recently where an ARI playback operation was attempted on a channel that had already been hung up and destroyed. Asterisk attempts to ensure this cannot happen, but if the playback and hangup happen at around the same time, it is possible for this crash to occur. | ||||
| Comments: | |||||